[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/game/TitleScreen/Level.gd" type="Script" id=1]
[ext_resource path="res://Assets/hexagon.png" type="Texture" id=2]
[ext_resource path="res://Assets/pictures/items/bold_silver.png" type="Texture" id=3]
[ext_resource path="res://Assets/fonts/thin_54.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/pictures/enemies/enemyBlack1_r.png" type="Texture" id=5]
[ext_resource path="res://Assets/pictures/enemies/enemyBlack5_r.png" type="Texture" id=6]
[ext_resource path="res://Assets/pictures/enemies/enemyBlack4_r.png" type="Texture" id=7]
[ext_resource path="res://Assets/pictures/enemies/enemyBlack2_r.png" type="Texture" id=8]
[ext_resource path="res://Assets/pictures/enemies/enemyBlack3_r.png" type="Texture" id=9]
[ext_resource path="res://Keyboard.tscn" type="PackedScene" id=11]

[node name="Level_01" type="Area2D"]
position = Vector2( 90, 610 )
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 0.999984 )
scale = Vector2( 1, 1.00001 )
polygon = PoolVector2Array( 0, -40, 30, -20, 30, 20, 0, 40, -30, 20, -30, -20 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Description" type="Control" parent="."]
margin_left = 787.0
margin_top = -400.0
margin_right = 827.0
margin_bottom = -360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="Description"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "Level: 01"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="Control" parent="Description"]
margin_top = 80.0
margin_right = 40.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Description/Speed"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Description/Speed"]
margin_left = 50.0
margin_right = 90.0
margin_bottom = 40.0
texture = ExtResource( 3 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Description/Speed"]
margin_left = 100.0
margin_right = 140.0
margin_bottom = 40.0
texture = ExtResource( 3 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keyboard" parent="Description" instance=ExtResource( 11 )]

[node name="Enemies" type="Control" parent="Description"]
margin_top = 300.0
margin_right = 40.0
margin_bottom = 340.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Description/Enemies"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Description/Enemies"]
margin_left = 70.0
margin_right = 154.0
margin_bottom = 104.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 8 )

[node name="TextureRect3" type="TextureRect" parent="Description/Enemies"]
margin_left = 140.0
margin_right = 224.0
margin_bottom = 103.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 9 )

[node name="TextureRect4" type="TextureRect" parent="Description/Enemies"]
margin_left = 210.0
margin_right = 294.0
margin_bottom = 82.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )

[node name="TextureRect5" type="TextureRect" parent="Description/Enemies"]
margin_left = 280.0
margin_right = 364.0
margin_bottom = 97.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 6 )

[node name="Range" type="Label" parent="Description"]
margin_left = 100.0
margin_top = 380.0
margin_right = 140.0
margin_bottom = 420.0
custom_fonts/font = ExtResource( 4 )
text = "0 - 9"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="." to="." method="_on_Level_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Level_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Level_mouse_exited"]
